# text-checker

./: .dockerignore  .env.example  .env.prod.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
deploy/: logrotate.conf  prometheus.yml  text-checker.service
docs/: architecture.md
docs/decisions/: 0001-provider-abstraction-openai-compat.md  0002-ollama-default-not-lmstudio.md  0003-deterministic-pipeline-not-agent.md  0004-mask-protected-tokens.md  0005-hallucination-guard-safe-fallback.md  0006-edit-ratio-thresholds.md  0007-in-memory-state-stage1.md  0008-english-only-no-chunker.md  0009-chroma-embedded-for-rag-store.md  0010-llm-based-glossary-extraction.md  0011-tighter-rag-defaults.md  0012-glossary-rag-interaction.md  0013-redis-backed-state.md  0014-single-replica-production-deployment.md  README.md
scripts/: backup.sh  update.sh
src/text_checker/: config.py  main.py  readiness.py
src/text_corrector/: config.py  main.py
tests/: conftest.py
tests/contract/: test_openai_compat.py
tests/integration/: test_e2e_ollama.py  test_rag_embeddings_ollama.py
tests/unit/: test_auth.py  test_eval.py  test_glossary_extractor.py  test_glossary_masker.py  test_glossary_rag_interaction.py  test_glossary_store.py  test_health.py  test_idempotency.py  test_metrics.py  test_pipeline.py  test_postprocess.py  test_postprocess_canonicalize.py  test_preprocess.py  test_preprocess_reapply.py  test_prompts.py  test_rag_chunker.py  test_rag_loaders.py  test_rag_orchestrator.py  test_rag_retriever.py  (+5 more)
(+36 files in other folders)
